--- a/public/index.html
+++ b/public/index.html
@@ -2,46 +2,49 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/logoTransparent.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <!-- Primary Meta Tags -->
+    <title>Paul Polihronakis | Web Developer</title>
+    <meta name="title" content="Paul Polihronakis | Web Developer" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="I create websites for content creators, showcase your work and get more clients."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.paulpolihronakis.com/" />
+    <meta property="og:title" content="Paul Polihronakis | Web Developer" />
+    <meta
+      property="og:description"
+      content="I create websites for content creators, showcase your work and get more clients."
+    />
+    <meta property="og:image" content="https://i.imgur.com/tpcww7u.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://www.paulpolihronakis.com/" />
+    <meta
+      property="twitter:title"
+      content="Paul Polihronakis | Web Developer"
+    />
+    <meta
+      property="twitter:description"
+      content="I create websites for content creators, showcase your work and get more clients."
+    />
+    <meta property="twitter:image" content="https://i.imgur.com/tpcww7u.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logoTransparent.png" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
     />
+
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
